--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello, world!
+<!DOCTYPE html>
+<html> <head> ‹meta charset="utf-8">
+<title>Project: Furr</title> </head>
+<body>
+<h1>Hello, World!</h1>
+10
+11
+12
+13
+14
+<p>param pam pam</p> <img src="https://www.kasandbox.org/programming-images/animals/crocodiles.png" alt="Scary crocodiles" width="200"/>
+</body>
+</html>
