--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> <head> ‹meta charset="utf-8">
+<html> <head> <meta charset="utf-8">
 <title>Project: Furr</title> </head>
 <body>
 <h1>Hello, World!</h1>
